fix(api): correct get apis
Corrected the get endpoints that retrieves all available items of a
given model without taking request.body, which is what a typical
GET or HEAD should do in order to be OpenAPI compliant.
